--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -25,13 +25,16 @@ jobs:
     needs: [create_release]
     if: github.repository == 'panda-re/lava'
     runs-on: ubuntu-22.04
+    env:
+      LLVM_DIR: /usr/lib/llvm-11
+      DEBIAN_FRONTEND: noninteractive
     steps:  
       - name: Checkout LAVA at current commit
         uses: actions/checkout@v4
       
       - name: Install compile dependencies
         run: |
-          sudo apt-get update -y         
+          sudo apt-get update -y    
           sudo apt-get install clang-tools-11 libclang-11-dev llvm-11-dev odb libjsoncpp-dev libodb-pgsql-2.4 g++-10 libprotobuf-dev libprotobuf-c-dev -y
 
       - name: Create Debian Package
