--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           release_branch: master
           use_api: true
-          increment: major
-  
+          increment: minor
+
   create_release_assets:
     needs: [create_release]
     if: github.repository == 'panda-re/lava'
@@ -47,6 +47,12 @@ jobs:
           cmake --build "./tools/build" --parallel "$(nproc)" --config Release
           cd ./tools/build
           cpack -G DEB
+
+      - name: Create Wheel file
+        run: |
+          python3 -m pip install --upgrade build
+          PRETEND_VERSION=${{ needs.create_release.outputs.v-version }} python3 -m build --wheel .
+
       - name: Upload wheel and debian packages to release
         uses: softprops/action-gh-release@v2
         env:
@@ -57,6 +63,7 @@ jobs:
           generate_release_notes: true
           prerelease: false
           files: |
+            dist/*.whl
             tools/build/lava*.deb
 
   build_container:
@@ -68,7 +75,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         username: pandare
-        password: ${{secrets.ALL_PANDARE_DOCKERHUB}}
+        password: ${{ secrets.ALL_PANDARE_DOCKERHUB }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
