--- a/tools/lavaODB/src/CMakeLists.txt
+++ b/tools/lavaODB/src/CMakeLists.txt
@@ -1,4 +1,6 @@
+include(GNUInstallDirs)
 set (GENERATED ${CMAKE_CURRENT_SOURCE_DIR}/../generated)
+set (SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/../../../scripts)
 
 if (NOT EXISTS ${GENERATED})
     file(MAKE_DIRECTORY ${GENERATED})
@@ -18,14 +20,17 @@ set(ODB_HXX ${CMAKE_CURRENT_SOURCE_DIR}/../include/lava.hxx)
 add_custom_command (
     OUTPUT ${ODB_GENERATED_FILES}
     COMMAND odb ${ODB_OPTS} ${ODB_HXX}
-    DEPENDS cleanup
+    COMMAND ${CMAKE_COMMAND} -E copy ${sqlFile} ${SCRIPTS}/lava.sql
+    DEPENDS cleanup ${ODB_HXX}
+    COMMENT "Generating ODB files and syncing SQL to scripts folder"
 )
 
 add_custom_target (cleanup
-    rm -rf ${GENERATED}/* #&& sleep 2
+    rm -rf ${GENERATED}/*
     COMMENT "Cleaning up tools/lavaODB/generated folder"
 )
 
+# create liblava-odb_x64.a library used by lavaFnTool and lavaTool
 add_library(lava-odb_x64 STATIC ${GENERATED}/lava-odb.cxx)
 set_property(TARGET lava-odb_x64 PROPERTY CXX_STANDARD 17)
 target_link_libraries(lava-odb_x64 odb odb-pgsql)
@@ -34,3 +39,9 @@ target_include_directories(lava-odb_x64 BEFORE
     PUBLIC
     ${GENERATED}
     ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+
+install(TARGETS lava-odb_x64
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}  # For shared libraries
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}  # For executables (if applicable)
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}  # For static libraries (if applicable)
+)
