Update container logic

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,15 @@
-target_injections
+.github
+docs
 target_bins
 target_configs
-tests
-docs
+target_injections
+.env
+.gitattributes
+.gitignore
+host.json
+host.json.example
+install.sh
+lava_template.json
+LICENSE
+requirements.txt
+VERSION.md
