Temporarily disable deployments, fix more tech debt in one shot

--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -2,9 +2,9 @@ name: Publish Lava Package and Container
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
+  #push:
+  #  branches:
+  #    - master
 
 jobs:
   create_release:
