init_host.py is now path agnostic and Fix CI/CD to handle new pyroclastic location

--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Create Wheel file
         run: |
+          cd python
           python3 -m pip install --upgrade build
           PRETEND_VERSION=${{ needs.create_release.outputs.v-version }} python3 -m build --wheel .
 
@@ -70,7 +71,7 @@ jobs:
         uses: actions/upload-artifact@v5
         with:
           name: pyroclastic
-          path: dist/*.whl
+          path: python/dist/*.whl
           if-no-files-found: error
 
   publish-to-pypi-and-release:
