--- a/.github/workflows/parallel_tests.yml
+++ b/.github/workflows/parallel_tests.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Create Wheel file
         run: |
+          cd python
           python3 -m pip install --upgrade build
           python3 -m build --wheel .
 
@@ -63,6 +64,7 @@ jobs:
     if: github.repository == 'panda-re/lava'
     runs-on: ubuntu-22.04
     env:
+      PYTHONUNBUFFERED: "1"
       DEBIAN_FRONTEND: noninteractive
       USER: ${{ github.actor }}
       # https://docs.github.com/en/actions/use-cases-and-examples/using-containerized-services/creating-postgresql-service-containers
@@ -88,16 +90,20 @@ jobs:
         mkdir -p $HOME/.panda
         wget --show-progress --quiet --tries=5 --wait=10 https://panda-re.mit.edu/qcows/linux/ubuntu/1804/x86_64/bionic-server-cloudimg-amd64-noaslr-nokaslr.qcow2 -O $HOME/.panda/bionic-server-cloudimg-amd64-noaslr-nokaslr.qcow2
     - name: Update and install all requirements
-      run: bash install.sh
+      run: |
+        bash install.sh
+        cd python
+        python3 -m pip install --upgrade pip
+        python3 -m pip install .
     - name: Setup LAVA
       run: |
         chmod +x ./scripts/*
-        python3 init-host.py -a
+        lava-init -a
     - name: Add Postgres credentials and Run LAVA
       run: |
         echo "localhost:5432:*:${POSTGRES_USER}:${POSTGRES_PASSWORD}" > ~/.pgpass
         chmod 600 ~/.pgpass
-        ./scripts/lava.sh -ak toy
+        lava -ak toy
       env:
         USER: ${{ github.actor }}
         POSTGRES_USER: postgres
