--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,6 +5,16 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 include-package-data = true
 
+[tool.pytest.ini_options]
+# Add both 'src' (for your code) and 'tests' (for generated lava_pb2)
+pythonpath = [
+  "src",
+  "tests",
+]
+
+# Optional: Add this to see your debug prints automatically without typing -s
+addopts = "-s"
+
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["pyroclastic", "pyroclastic.*"]
@@ -32,7 +42,7 @@ dependencies = [
     "numpy",
     "pandare==1.8.78",
     "PyYAML",
-    "SQLAlchemy",
+    "sqlalchemy",
     "tabulate",
     "psycopg2-binary",
     "ijson"
