--- a/python/src/pyroclastic/data/makefile.fixup
+++ b/python/src/pyroclastic/data/makefile.fixup
@@ -4,6 +4,6 @@ LAVA_C_FILES := $(shell find . -name '*.c')
 lava_preprocess: $(LAVA_C_FILES)
 	for lavafile in $^; do \
    		$(CC) -I. -include stdio.h -static -g -gdwarf-2 -O0 $(CFLAGS) -E $${lavafile} -o $${lavafile}_pre; \
-		cp $${lavafile} $${lavafile}_bak; \
+		cp $${lavafile} $${lavafile}.bak; \
 		mv $${lavafile}_pre $${lavafile}; \
 	done
